tests/snapshots/tests__standard@table-1.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local foo = {
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
}

local foo = {
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
	"foo",
	"bar",
	"baz",
}

