tests/snapshots/tests__standard@table-2.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local foo =
	{ "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa", "aaaa" }

