tests/snapshots/tests__standard@table-4.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
local thisisathing = {
	this_is_one = "one",
	this_is_two = "two",
	this_is_three = "three",
	this_is_four = "four",
	f = "b",
}

