tests/snapshots/tests__standard@table-5.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
a = {
	key1 = string.format(
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		variable_names
	),
	key2 = string.format(
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		"test",
		variable_names
	),
}

