tests/snapshots/tests__standard@table-field-comments-2.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::Lua51)"
input_file: tests/inputs/table-field-comments-2.lua
snapshot_kind: text
---
-- https://github.com/JohnnyMorganz/StyLua/issues/942
local t = {
	plus_one =
		---@param n number
		---@return number
		function(n)
			return n + 1
		end,
}
